--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 ### 🧰 Tecnologías
 
-![Pandas](https://img.shields.io/badge/Pandas-150458?style=for-the-badge&logo=pandas&logoColor=white)
-![NumPy](https://img.shields.io/badge/NumPy-013243?style=for-the-badge&logo=numpy&logoColor=white)
-![Scikit-learn](https://img.shields.io/badge/Scikit--Learn-F7931E?style=for-the-badge&logo=scikit-learn&logoColor=white)
-![Matplotlib](https://img.shields.io/badge/Matplotlib-11557C?style=for-the-badge&logo=matplotlib&logoColor=white)
-![Seaborn](https://img.shields.io/badge/Seaborn-3776AB?style=for-the-badge&logo=python&logoColor=white)
-![Jupyter](https://img.shields.io/badge/Jupyter-F37626?style=for-the-badge&logo=jupyter&logoColor=white)
+
+<span style="color:#FFA500"><b>pandas</b></span><br>
+<span style="color:#00AAFF"><b>numpy</b></span><br>
+<span style="color:#FF5733"><b>scikit-learn</b></span><br>
+<span style="color:#1E90FF"><b>matplotlib</b></span><br>
+<span style="color:#4CAF50"><b>seaborn</b></span><br>
+<span style="color:#F07D00"><b>jupyter</b></span>
+
 
 
